assets/form: adding additional spacing under all form groups so less squeezed fixes #549

--- a/adhocracy-plus/assets/scss/_form.scss
+++ b/adhocracy-plus/assets/scss/_form.scss
@@ -144,7 +144,7 @@ div.cke_focus {
 }
 
 .form-group {
-    margin-bottom: $spacer / 2;
+    margin-bottom: 1.5*$spacer;
 }
 
 //kept from before bootstrap for datepicker
